# xero-welcome

./: Cargo.toml  README.md  build.rs
resources/: autostart.desktop
src/: main.rs
ui/: xero-welcome.slint
ui/pages/: en.slint  globals.slint  pages.slint
