[package]
name = "xero-welcome"
version = "2.0.0"
authors = ["DanielcoderX <danielcoderx@keemail.me>"]
edition = "2021"
build = "build.rs"

[dependencies]
open = "5.1.2"
slint = "1.4"
qttypes = "0.3.0"  # or the latest version that supports Qt6
cpp = "0.6.0"
cpp_build = "0.6.0"

[build-dependencies]
slint-build = "1.4"

[profile.release]
lto = true
panic = "abort"
strip = true
codegen-units = 1
opt-level = "s"
